@@ -1,3 +1,6 @@
+* Fri Mar 14 2003 Philip
+- Announce login success earlier
+
 * Thu Mar 13 2003 Mik
 - Add preliminary webcam support
 
